# MolSim-SS24

./: .gitignore  .gitmodules  .molsim.1  CMakeLists.txt  Doxyfile  README.md  draw-grid.py  strategy.drawio
bench/: CMakeLists.txt  bench.cpp  benchLJ.cpp  benchLinkedCell.cpp
bench/results/: lj_bench_result.csv  lj_bench_result.txt  lj_big_bench.csv
src/: CMakeLists.txt  FileReader.cpp  FileReader.h  MolSim.cpp  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h
src/analytics/: Analyzer.cpp  Analyzer.h  ProgressLogger.cpp  ProgressLogger.h
src/generators/: CuboidParticleCluster.cpp  CuboidParticleCluster.h  ParticleGenerator.cpp  ParticleGenerator.h
src/io/: FileReader.cpp  FileReader.h
src/io/argparse/: argparse.cpp  argparse.h  argpase.cpp
src/io/fileReader/: FileReader.cpp  FileReader.h  asciiReader.cpp  asciiReader.h  clusterReader.cpp  clusterReader.h  emptyReader.cpp  emptyReader.h  readerFactory.cpp  readerFactory.h  xmlReader.cpp  xmlReader.h
src/io/fileWriter/: FileWriter.h  VTKWriter.cpp  VTKWriter.h  XMLWriter.cpp  XMLWriter.h  XYZWriter.cpp  XYZWriter.h  emptyWriter.cpp  emptyWriter.h  vtk-unstructured.cpp  vtk-unstructured.h  writerFactory.cpp  writerFactory.h
src/io/outputWriter/: VTKWriter.cpp  VTKWriter.h  XYZWriter.cpp  XYZWriter.h
src/io/xmlparse/: xmlparse.cpp  xmlparse.h
src/io/xsd/: simulation.cpp  simulation.h  simulation.xsd  vtk-unstructured.cpp  vtk-unstructured.h
src/models/: MembraneMap.cpp  MembraneMap.h  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h
src/models/generators/: CuboidParticleCluster.cpp  CuboidParticleCluster.h  MembraneParticleCluster.cpp  MembraneParticleCluster.h  ParticleCluster.cpp  ParticleCluster.h  ParticleGenerator.cpp  ParticleGenerator.h  SphereParticleCluster.cpp  SphereParticleCluster.h
src/models/linked_cell/: BoundaryCell.cpp  BoundaryCell.h  Cell.cpp  Cell.h  CellGrid.cpp  CellGrid.h  CellGridIterators.cpp  HaloCell.cpp  HaloCell.h  InnerCell.cpp  InnerCell.h
src/models/membrane/: Membrane.cpp  Membrane.h
src/models/molecules/: Membrane.cpp  Membrane.h  Molecule.cpp  Molecule.h
src/outputWriter/: VTKWriter.h  XYZWriter.cpp  XYZWriter.h
src/physics/: Interface.cpp  stratFactory.cpp  stratFactory.h  strategy.cpp  strategy.h
src/physics/boundaryConditions/: BoundaryCondition.cpp  BoundaryCondition.h  BoundaryConditionHandler.cpp  BoundaryConditionHandler.h  BoundaryConfig.h  OverflowBoundary.cpp  OverflowBoundary.h  PeriodicBoundary.cpp  PeriodicBoundary.h  Position.h  SoftReflectiveBoundary.cpp  SoftReflectiveBoundary.h  StaticBoundary.cpp  StaticBoundary.h  WallBoundary.cpp  WallBoundary.h
src/physics/forceCal/: forceCal.cpp  forceCal.h
src/physics/locationCal/: locationCal.cpp  locationCal.h
src/physics/thermostat/: IndividualThermostat.cpp  IndividualThermostat.h  NoneThermostat.h  Thermostat.cpp  Thermostat.h  ThermostatFactory.cpp  ThermostatFactory.h
src/physics/velocityCal/: velocityCal.cpp  velocityCal.h
src/simulation/: LennardJonesDomainSimulation.cpp  LennardJonesDomainSimulation.h  MembraneSimulation.cpp  MembraneSimulation.h  MixedLJSimulation.cpp  MixedLJSimulation.h  ParticleGenerator.cpp  ParticleGenerator.h  baseSimulation.cpp  baseSimulation.h  lennardJonesSim.cpp  lennardJonesSim.h  linkedLennardJonesSim.cpp  linkedLennardJonesSim.h  planetSim.cpp  planetSim.h  simFactory.cpp  simFactory.h  stdSimulation.cpp  stdSimulation.h
src/utils/: ArrayUtils.h  MaxwellBoltzmannDistribution.h  Params.h  Position.h
tests/: CMakeLists.txt  test.cpp
tests/analytics/: testAnalyzer.cpp
tests/container/: testParticleContainer.cpp
tests/data/: clusterReader1.txt  clusterReader2.txt  clusterReader3.txt  clusterReader4.txt
tests/io/: testClusterReader.cpp  testWriter.cpp
tests/models/: testActiveIterator.cpp  testCuboidToMembrane.cpp  testForceCalc.cpp  testMembrane.cpp  testParticleContainer.cpp
tests/models/generators/: testParticleGenerator.cpp  testSphereParticleGenerator.cpp
tests/physics/: testForceGravity.cpp  testForceLJ.cpp  testForceLJMixed.cpp  testForceLJlinked.cpp  testForceMembrane.cpp  testIndividualThermostat.cpp  testStationaryParticles.cpp  testThermostat.cpp
tests/simulation/: testParticleGenerator.cpp  testSphereParticleGenerator.cpp
(+1080 files in other folders)
